--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "dependencies": {
     "expo": "~49.0.15",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.4.0",
     "expo-linear-gradient": "~12.3.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "jest": "^29.2.1",
     "jest-expo": "~49.0.0",
